<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50sp"
    tools:context=".NewBill"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:id="@+id/NewInvoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0D47A1"
        android:width="150dp"
        android:text="@string/new_invoice"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtBillDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_date"
        android:autofillHints="Date"
        android:inputType="" />

    <EditText
        android:id="@+id/txtInvoiceNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_invoice_no"
        android:autofillHints="Invoice"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spinnerPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="Payment Type" />

    <EditText
        android:id="@+id/txtCustomerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/customer_name"
        android:autofillHints="Customer Name"
        android:inputType="" />

    <EditText
        android:id="@+id/txtPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/phone_91"
        android:autofillHints="Phone"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/address"
        android:autofillHints="Address"
        android:inputType="" />

    <Spinner
        android:id="@+id/spinnerProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="Product Type" />

    <EditText
        android:id="@+id/txtQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/quantity_in_grams"
        android:autofillHints="Quantity"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtTotalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/total_amount"
        android:autofillHints="Amount"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtAmountAfterTax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/amount_after_tax"
        android:autofillHints="Tax"
        android:inputType="number" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/submit"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_background"
            />



    </LinearLayout>

</ScrollView>