<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center"
    android:layout_margin="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#0D47A1"/>

    <EditText
        android:id="@+id/txtUserNameSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/txtPasswordSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="Password"
       />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/sign_in"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_background" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account"
        android:layout_gravity="center"
        android:textColor="#0D47A1"
        android:textSize="15sp" />
    <Button
        android:id="@+id/btnSignUpSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="end"
        android:text="@string/sign_up"
        android:background="@color/white"/>

</LinearLayout>